# lightly-train

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: check_code_format.yml  test_build.yml  test_documentation.yml  test_unit.yml  test_unit_minimal_dependencies.yml
docker/: Dockerfile-amd64-cuda
docs/: prebuild.py
docs/source/: index.md  installation.md  instance_segmentation.md  object_detection.md
docs/source/pretrain_distill/: index.md
docs/source/settings/: pretrain_settings.md  train_settings.md
examples/: tensorrt_int8_calibration_example.py
examples/notebooks/: distillation.ipynb  eomt_semantic_segmentation.ipynb  object_detection.ipynb  rfdetr.ipynb
src/lightly_train/: __init__.py  _task_checkpoint.py  _torch_helpers.py  _training_step_timer.py  types.py
src/lightly_train/_commands/: export_task.py  train.py  train_task.py  train_task_helpers.py
src/lightly_train/_data/: image_classification_dataset.py  task_batch_collation.py  yolo_instance_segmentation_dataset.py  yolo_object_detection_dataset.py
src/lightly_train/_export/: tensorrt_calibrator.py  tensorrt_helpers.py
src/lightly_train/_methods/dino/: dino.py
src/lightly_train/_models/: package_helpers.py
src/lightly_train/_models/dinov2_vit/dinov2_vit_src/layers/: patch_embed.py
src/lightly_train/_models/dinov3/dinov3_src/layers/: patch_embed.py
src/lightly_train/_optim/: optimizer_helpers.py
src/lightly_train/_task_models/: task_model_helpers.py  train_model.py
src/lightly_train/_task_models/dinov2_eomt_semantic_segmentation/: task_model.py  train_model.py
src/lightly_train/_task_models/dinov2_linear_semantic_segmentation/: task_model.py  train_model.py
src/lightly_train/_task_models/dinov2_ltdetr_object_detection/: task_model.py  train_model.py
src/lightly_train/_task_models/dinov3_eomt_instance_segmentation/: task_model.py  train_model.py
src/lightly_train/_task_models/dinov3_eomt_panoptic_segmentation/: task_model.py  train_model.py
src/lightly_train/_task_models/dinov3_eomt_semantic_segmentation/: task_model.py  train_model.py
src/lightly_train/_task_models/dinov3_ltdetr_object_detection/: task_model.py  train_model.py
src/lightly_train/_task_models/eomt/: hooks.py
src/lightly_train/_task_models/image_classification/: __init__.py  task_model.py  train_model.py  transforms.py
src/lightly_train/_task_models/object_detection_components/: rtdetrv2_decoder.py
src/lightly_train/_task_models/picodet_object_detection/: pico_head.py  train_model.py
src/lightly_train/_transforms/: image_classification_transform.py  instance_segmentation_transform.py  view_transform.py
tests/: helpers.py  test__torch_helpers.py  test__training_step_timer.py
tests/_commands/: test_train.py  test_train_task.py
tests/_data/: test_image_classification_dataset.py
tests/_methods/dino/: test_dino.py
tests/_optim/: test_optimizer_helpers.py
tests/_task_models/dinov2_ltdetr_object_detection/: test_task_model.py
tests/_task_models/dinov3_ltdetr_object_detection/: test_task_model.py
tests/_task_models/picodet_object_detection/: test_task_model.py
